* Version 2.0.1 (unreleased)

  * Support for Security Key by Yubico

* Version 2.0.0 (released 2014-09-26)

  * Updated to U2F_V2 standard.

  * Removed old draft versions.

* Version 1.1.0 (released 2014-04-15)

  * Added support for the HID transport.

* Version 1.0.0 (released 2014-02-18)

  * First public release.

  * Added support for U2F_V2.

  * Added soft U2F device for testing purposes.

* Version 0.0.2 (released 2013-10-07)

  * Better instructions in README

  * Includes executables missing from 0.0.1

* Version 0.0.1 (released 2013-08-22)

  * Initial internal release!